Includes several new Q&A files and updated documentation.